changed the tutorial widget video url input to stop overlapping with the OnOffSwitch

--- a/client/stylus/app.activity.styl
+++ b/client/stylus/app.activity.styl
@@ -2030,9 +2030,12 @@ a.followup-link
   font-weight 600
   float left
 
+input.tutorial-embed-link
+  max-width 490px
+
 div.show-tutorial-embed
   margin-top -28px!important
-  margin-right 5px
+  margin-right 0px
   display inline-block
   z-index 10
 
